--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "ir-engine/ir-template",
+  "name": "ir-engine/ir-translator",
   "version": "0.0.0",
   "engineVersion": "1.6.0",
-  "description": "The default project for iR Engine",
+  "description": "Translation location page",
   "thumbnail": "/static/IR_thumbnail.jpg"
 }
