--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ir-engine/ir-template",
+  "name": "@ir-engine/ir-translator",
   "version": "0.0.0",
   "scripts": {
     "test": "exit 0",
